build/log/idf_py_stdout_output_29143
[1/10] Performing build step for 'bootloader'
[1/1] cd /workspaces/TANK/build/bootloader/esp-idf/esptool_py && /opt/esp/python_env/idf5.1_py3.8_env/bin/python /opt/esp/idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /workspaces/TANK/build/bootloader/bootloader.bin
Bootloader binary size 0x68c0 bytes. 0x740 bytes (6%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/__/led.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/__/led.c.obj 
ccache /opt/esp/tools/xtensa-esp32-elf/esp-12.2.0_20250801/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.7-1-g4b1ae715b8\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/workspaces/TANK/build/config -I/workspaces/TANK -I/opt/esp/idf/components/newlib/platform_include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/opt/esp/idf/components/freertos/esp_additions/include/freertos -I/opt/esp/idf/components/freertos/esp_additions/include -I/opt/esp/idf/components/freertos/esp_additions/arch/xtensa/include -I/opt/esp/idf/components/esp_hw_support/include -I/opt/esp/idf/components/esp_hw_support/include/soc -I/opt/esp/idf/components/esp_hw_support/include/soc/esp32 -I/opt/esp/idf/components/esp_hw_support/port/esp32/. -I/opt/esp/idf/components/heap/include -I/opt/esp/idf/components/log/include -I/opt/esp/idf/components/soc/include -I/opt/esp/idf/components/soc/esp32 -I/opt/esp/idf/components/soc/esp32/include -I/opt/esp/idf/components/hal/esp32/include -I/opt/esp/idf/components/hal/include -I/opt/esp/idf/components/hal/platform_port/include -I/opt/esp/idf/components/esp_rom/include -I/opt/esp/idf/components/esp_rom/include/esp32 -I/opt/esp/idf/components/esp_rom/esp32 -I/opt/esp/idf/components/esp_common/include -I/opt/esp/idf/components/esp_system/include -I/opt/esp/idf/components/esp_system/port/soc -I/opt/esp/idf/components/esp_system/port/include/private -I/opt/esp/idf/components/xtensa/include -I/opt/esp/idf/components/xtensa/esp32/include -I/opt/esp/idf/components/lwip/include -I/opt/esp/idf/components/lwip/include/apps -I/opt/esp/idf/components/lwip/include/apps/sntp -I/opt/esp/idf/components/lwip/lwip/src/include -I/opt/esp/idf/components/lwip/port/include -I/opt/esp/idf/components/lwip/port/freertos/include -I/opt/esp/idf/components/lwip/port/esp32xx/include -I/opt/esp/idf/components/lwip/port/esp32xx/include/arch -I/opt/esp/idf/components/driver/include -I/opt/esp/idf/components/driver/deprecated -I/opt/esp/idf/components/driver/analog_comparator/include -I/opt/esp/idf/components/driver/dac/include -I/opt/esp/idf/components/driver/gpio/include -I/opt/esp/idf/components/driver/gptimer/include -I/opt/esp/idf/components/driver/i2c/include -I/opt/esp/idf/components/driver/i2s/include -I/opt/esp/idf/components/driver/ledc/include -I/opt/esp/idf/components/driver/mcpwm/include -I/opt/esp/idf/components/driver/parlio/include -I/opt/esp/idf/components/driver/pcnt/include -I/opt/esp/idf/components/driver/rmt/include -I/opt/esp/idf/components/driver/sdio_slave/include -I/opt/esp/idf/components/driver/sdmmc/include -I/opt/esp/idf/components/driver/sigma_delta/include -I/opt/esp/idf/components/driver/spi/include -I/opt/esp/idf/components/driver/temperature_sensor/include -I/opt/esp/idf/components/driver/touch_sensor/include -I/opt/esp/idf/components/driver/twai/include -I/opt/esp/idf/components/driver/uart/include -I/opt/esp/idf/components/driver/usb_serial_jtag/include -I/opt/esp/idf/components/driver/touch_sensor/esp32/include -I/opt/esp/idf/components/esp_pm/include -I/opt/esp/idf/components/esp_ringbuf/include -I/opt/esp/idf/components/nvs_flash/include -I/opt/esp/idf/components/esp_partition/include -I/opt/esp/idf/components/spi_flash/include -I/workspaces/TANK/components/ps4/src -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/workspaces/TANK=. -fmacro-prefix-map=/opt/esp/idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/__/led.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/__/led.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/__/led.c.obj -c /workspaces/TANK/led.c
/workspaces/TANK/led.c:53:6: error: conflicting types for 'led_update'; have 'void(int8_t,  int8_t,  int8_t,  int8_t,  _Bool,  _Bool,  _Bool,  _Bool)' {aka 'void(signed char,  signed char,  signed char,  signed char,  _Bool,  _Bool,  _Bool,  _Bool)'}
   53 | void led_update(int8_t lx, int8_t ly, int8_t rx, int8_t ry, bool circle, bool cross, bool triangle, bool square) {
      |      ^~~~~~~~~~
In file included from /workspaces/TANK/led.c:5:
/workspaces/TANK/led.h:10:6: note: previous declaration of 'led_update' with type 'void(const ps4_state_t *)'
   10 | void led_update(const ps4_state_t *state);
      |      ^~~~~~~~~~
ninja: build stopped: subcommand failed.
